ChipsCompiler/FullCompileChain/ChipsXmiGenerator/generated/ChipsParser.cpp

// Generated from /home/agallone/Documents/Thesis_code/Chips_Public/ChipsCompiler/FullCompileChain/ChipsXmiGenerator/../Chips.g4 by ANTLR 4.13.2


#include "ChipsVisitor.h"

#include "ChipsParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ChipsParserStaticData final {
  ChipsParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ChipsParserStaticData(const ChipsParserStaticData&) = delete;
  ChipsParserStaticData(ChipsParserStaticData&&) = delete;
  ChipsParserStaticData& operator=(const ChipsParserStaticData&) = delete;
  ChipsParserStaticData& operator=(ChipsParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag chipsParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<ChipsParserStaticData> chipsParserStaticData = nullptr;

void chipsParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (chipsParserStaticData != nullptr) {
    return;
  }
#else
  assert(chipsParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ChipsParserStaticData>(
    std::vector<std::string>{
      "program", "system", "preamble", "object_def", "implementation_def", 
      "node_mapping", "function_def", "collective_op_def", "c_output", "l_function_def", 
      "p_function_def", "c_signature", "c_keywords", "with_section", "with_statement", 
      "init_section", "then_section", "expr", "expr0", "expr01", "expr1", 
      "expr2", "cast", "c_expr", "c_stopless_expr", "c_stopless_expr0", 
      "c_stopless_expr01", "c_stopless_expr1", "c_stopless_expr2", "c_cast", 
      "suffixes", "c_suffixes", "s_suffixable_expr", "block", "loop_in", 
      "loop_statement", "c_loop_statement", "s_loop_statement", "if_else_statement", 
      "s_if_else_statement", "c_if_else_statement", "if_statement", "s_if_statement", 
      "c_if_statement", "statement", "s_statement", "s_expr", "collective_operation", 
      "c_statement", "named_output", "p_named_output", "df_parameter_decl", 
      "df_type", "pdf_parameter_type", "pdf_parameter_decl", "cdf_defaulted_decl", 
      "cdf_full_declaration"
    },
    std::vector<std::string>{
      "", "", "'int'", "'float'", "'bool'", "'logical'", "'physical'", "'as'", 
      "'init'", "'then'", "'for'", "'in'", "'if'", "'else'", "'to'", "'link'", 
      "'implements'", "'having'", "'input'", "'stop'", "'among'", "'spread'", 
      "'collect'", "'ctx'", "'object'", "'with'", "'implementation'", "'by'", 
      "'@'", "'default'", "'using'", "'actuator'", "'sensor'", "'->'", "'+'", 
      "'-'", "'*'", "'/'", "'%'", "'<'", "'>'", "'=='", "'<='", "'>='", 
      "'!='", "'&&'", "'||'", "'!'", "'='", "','", "';'", "'('", "')'", 
      "'{'", "'}'", "'['", "']'", "':'", "'.'"
    },
    std::vector<std::string>{
      "", "SYSTEM_KW", "INT_KW", "FLOAT_KW", "BOOL_KW", "LOGICAL_KW", "PHYSICAL_KW", 
      "AS_KW", "INIT_KW", "THEN_KW", "FOREACH_KW", "IN_KW", "IF_KW", "ELSE_KW", 
      "TO_KW", "LINK_KW", "IMPLEMENTS_KW", "HAVING_KW", "INPUT_KW", "STOP_KW", 
      "AMONG_KW", "SPREAD_KW", "COLLECT_KW", "CTX_KW", "OBJECT_KW", "WITH_KW", 
      "IMPLEMENTATION_KW", "BY_KW", "TARGET_KW", "DEFAULT_KW", "USING_KW", 
      "ACTUATOR_KW", "SENSOR_KW", "ARROW", "PLUS", "MINUS", "TIMES", "DIV", 
      "MOD", "LT", "GT", "EQ", "LEQ", "GEQ", "NEQ", "AND", "OR", "NOT", 
      "ASSIGN", "COMMA", "SEMICOL", "L_PARENTH", "R_PARENTH", "L_CURL", 
      "R_CURL", "L_SQUA", "R_SQUA", "COLUMN", "PERIOD", "BOOL", "FLOAT", 
      "INT", "IDENTIFIER", "NEWLINE", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  chipsParserStaticData = std::move(staticData);
}

}

ChipsParser::ChipsParser(TokenStream *input) : ChipsParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ChipsParser::ChipsParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ChipsParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *chipsParserStaticData->atn, chipsParserStaticData->decisionToDFA, chipsParserStaticData->sharedContextCache, options);
}

ChipsParser::~ChipsParser() {
  delete _interpreter;
}

const atn::ATN& ChipsParser::getATN() const {
  return *chipsParserStaticData->atn;
}

std::string ChipsParser::getGrammarFileName() const {
  return "Chips.g4";
}

const std::vector<std::string>& ChipsParser::getRuleNames() const {
  return chipsParserStaticData->ruleNames;
}

const dfa::Vocabulary& ChipsParser::getVocabulary() const {
  return chipsParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ChipsParser::getSerializedATN() const {
  return chipsParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ChipsParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChipsParser::ProgramContext::EOF() {
  return getToken(ChipsParser::EOF, 0);
}

std::vector<ChipsParser::PreambleContext *> ChipsParser::ProgramContext::preamble() {
  return getRuleContexts<ChipsParser::PreambleContext>();
}

ChipsParser::PreambleContext* ChipsParser::ProgramContext::preamble(size_t i) {
  return getRuleContext<ChipsParser::PreambleContext>(i);
}

ChipsParser::SystemContext* ChipsParser::ProgramContext::system() {
  return getRuleContext<ChipsParser::SystemContext>(0);
}


size_t ChipsParser::ProgramContext::getRuleIndex() const {
  return ChipsParser::RuleProgram;
}


std::any ChipsParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ChipsParser::ProgramContext* ChipsParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ChipsParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 90177632) != 0)) {
      setState(114);
      preamble();
      setState(119);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ChipsParser::SYSTEM_KW) {
      setState(120);
      system();
    }
    setState(123);
    match(ChipsParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SystemContext ------------------------------------------------------------------

ChipsParser::SystemContext::SystemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChipsParser::SystemContext::SYSTEM_KW() {
  return getToken(ChipsParser::SYSTEM_KW, 0);
}

tree::TerminalNode* ChipsParser::SystemContext::L_CURL() {
  return getToken(ChipsParser::L_CURL, 0);
}

tree::TerminalNode* ChipsParser::SystemContext::R_CURL() {
  return getToken(ChipsParser::R_CURL, 0);
}

std::vector<ChipsParser::S_statementContext *> ChipsParser::SystemContext::s_statement() {
  return getRuleContexts<ChipsParser::S_statementContext>();
}

ChipsParser::S_statementContext* ChipsParser::SystemContext::s_statement(size_t i) {
  return getRuleContext<ChipsParser::S_statementContext>(i);
}


size_t ChipsParser::SystemContext::getRuleIndex() const {
  return ChipsParser::RuleSystem;
}


std::any ChipsParser::SystemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitSystem(this);
  else
    return visitor->visitChildren(this);
}

ChipsParser::SystemContext* ChipsParser::system() {
  SystemContext *_localctx = _tracker.createInstance<SystemContext>(_ctx, getState());
  enterRule(_localctx, 2, ChipsParser::RuleSystem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(ChipsParser::SYSTEM_KW);
    setState(126);
    match(ChipsParser::L_CURL);
    setState(130);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 4611686018435814428) != 0)) {
      setState(127);
      s_statement();
      setState(132);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(133);
    match(ChipsParser::R_CURL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PreambleContext ------------------------------------------------------------------

ChipsParser::PreambleContext::PreambleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ChipsParser::PreambleContext::getRuleIndex() const {
  return ChipsParser::RulePreamble;
}

void ChipsParser::PreambleContext::copyFrom(PreambleContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- CollectiveOperationDefinitionContext ------------------------------------------------------------------

ChipsParser::Collective_op_defContext* ChipsParser::CollectiveOperationDefinitionContext::collective_op_def() {
  return getRuleContext<ChipsParser::Collective_op_defContext>(0);
}

ChipsParser::CollectiveOperationDefinitionContext::CollectiveOperationDefinitionContext(PreambleContext *ctx) { copyFrom(ctx); }


std::any ChipsParser::CollectiveOperationDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitCollectiveOperationDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ObjectDefinitionContext ------------------------------------------------------------------

ChipsParser::Object_defContext* ChipsParser::ObjectDefinitionContext::object_def() {
  return getRuleContext<ChipsParser::Object_defContext>(0);
}

ChipsParser::ObjectDefinitionContext::ObjectDefinitionContext(PreambleContext *ctx) { copyFrom(ctx); }


std::any ChipsParser::ObjectDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitObjectDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionDefinitionContext ------------------------------------------------------------------

ChipsParser::Function_defContext* ChipsParser::FunctionDefinitionContext::function_def() {
  return getRuleContext<ChipsParser::Function_defContext>(0);
}

ChipsParser::FunctionDefinitionContext::FunctionDefinitionContext(PreambleContext *ctx) { copyFrom(ctx); }


std::any ChipsParser::FunctionDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitFunctionDefinition(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ImplementationDefinitionContext ------------------------------------------------------------------

ChipsParser::Implementation_defContext* ChipsParser::ImplementationDefinitionContext::implementation_def() {
  return getRuleContext<ChipsParser::Implementation_defContext>(0);
}

ChipsParser::ImplementationDefinitionContext::ImplementationDefinitionContext(PreambleContext *ctx) { copyFrom(ctx); }


std::any ChipsParser::ImplementationDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitImplementationDefinition(this);
  else
    return visitor->visitChildren(this);
}
ChipsParser::PreambleContext* ChipsParser::preamble() {
  PreambleContext *_localctx = _tracker.createInstance<PreambleContext>(_ctx, getState());
  enterRule(_localctx, 4, ChipsParser::RulePreamble);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(139);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ChipsParser::OBJECT_KW: {
        _localctx = _tracker.createInstance<ChipsParser::ObjectDefinitionContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(135);
        object_def();
        break;
      }

      case ChipsParser::LOGICAL_KW:
      case ChipsParser::PHYSICAL_KW: {
        _localctx = _tracker.createInstance<ChipsParser::FunctionDefinitionContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(136);
        function_def();
        break;
      }

      case ChipsParser::SPREAD_KW:
      case ChipsParser::COLLECT_KW: {
        _localctx = _tracker.createInstance<ChipsParser::CollectiveOperationDefinitionContext>(_localctx);
        enterOuterAlt(_localctx, 3);
        setState(137);
        collective_op_def();
        break;
      }

      case ChipsParser::IMPLEMENTATION_KW: {
        _localctx = _tracker.createInstance<ChipsParser::ImplementationDefinitionContext>(_localctx);
        enterOuterAlt(_localctx, 4);
        setState(138);
        implementation_def();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Object_defContext ------------------------------------------------------------------

ChipsParser::Object_defContext::Object_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChipsParser::Object_defContext::OBJECT_KW() {
  return getToken(ChipsParser::OBJECT_KW, 0);
}

tree::TerminalNode* ChipsParser::Object_defContext::IDENTIFIER() {
  return getToken(ChipsParser::IDENTIFIER, 0);
}

ChipsParser::With_sectionContext* ChipsParser::Object_defContext::with_section() {
  return getRuleContext<ChipsParser::With_sectionContext>(0);
}


size_t ChipsParser::Object_defContext::getRuleIndex() const {
  return ChipsParser::RuleObject_def;
}


std::any ChipsParser::Object_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitObject_def(this);
  else
    return visitor->visitChildren(this);
}

ChipsParser::Object_defContext* ChipsParser::object_def() {
  Object_defContext *_localctx = _tracker.createInstance<Object_defContext>(_ctx, getState());
  enterRule(_localctx, 6, ChipsParser::RuleObject_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(141);
    match(ChipsParser::OBJECT_KW);
    setState(142);
    match(ChipsParser::IDENTIFIER);
    setState(143);
    with_section();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Implementation_defContext ------------------------------------------------------------------

ChipsParser::Implementation_defContext::Implementation_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ChipsParser::Implementation_defContext::IMPLEMENTATION_KW() {
  return getToken(ChipsParser::IMPLEMENTATION_KW, 0);
}

std::vector<tree::TerminalNode *> ChipsParser::Implementation_defContext::IDENTIFIER() {
  return getTokens(ChipsParser::IDENTIFIER);
}

tree::TerminalNode* ChipsParser::Implementation_defContext::IDENTIFIER(size_t i) {
  return getToken(ChipsParser::IDENTIFIER, i);
}

tree::TerminalNode* ChipsParser::Implementation_defContext::COLUMN() {
  return getToken(ChipsParser::COLUMN, 0);
}

tree::TerminalNode* ChipsParser::Implementation_defContext::BY_KW() {
  return getToken(ChipsParser::BY_KW, 0);
}

tree::TerminalNode* ChipsParser::Implementation_defContext::L_CURL() {
  return getToken(ChipsParser::L_CURL, 0);
}

tree::TerminalNode* ChipsParser::Implementation_defContext::R_CURL() {
  return getToken(ChipsParser::R_CURL, 0);
}

std::vector<ChipsParser::Node_mappingContext *> ChipsParser::Implementation_defContext::node_mapping() {
  return getRuleContexts<ChipsParser::Node_mappingContext>();
}

ChipsParser::Node_mappingContext* ChipsParser::Implementation_defContext::node_mapping(size_t i) {
  return getRuleContext<ChipsParser::Node_mappingContext>(i);
}


size_t ChipsParser::Implementation_defContext::getRuleIndex() const {
  return ChipsParser::RuleImplementation_def;
}


std::any ChipsParser::Implementation_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ChipsVisitor*>(visitor))
    return parserVisitor->visitImplementation_def(this);
  else
    return visitor->visitChildren(this);
}

ChipsParser::Implementation_defContext* ChipsParser::implementation_def() {
  Implementation_defContext *_localctx = _tracker.createInstance<Implementation_defContext>(_ctx, getState());
  enterRule(_localctx, 8, ChipsParser::RuleImplementation_def);
  size_t _la = 0;
